@@ -1,6 +1,7 @@
 2015-06-15 Martin Grønholdt
 
 * fs/fs.c (fs_open): Don't warn on file not found, just tell in a debuggy way.
+*         (fs_close): Test handle before freeing the memory.
 * net/tcp.c (init_tcp): Return boolean.
 *			(tcp_listen: Return boolean.
 *		   : Added tcp_get_connections.
@@ -22,6 +23,7 @@
 *					   : All local functions static.
 *					   : Creates a (parsed) copy of the request data.
 * slighttp/http-response.c: Added http_get_handlers.
+*						   (http_get_handlers): Fixed, would not return the rigth handler.
 * slighttp/http-request.h: Only export http_parse_request and http_free_request.
 * slighttp/http-common.h: Added HTTP_SKIP_SPACES, and HTTP_SKIP_CRLF.
 * sm_func.h: Added resboot.
